cloudformation/cosmicverge-server.yml
Parameters:
  VpcId:
    Type: AWS::EC2::VPC::Id
    Description: The VPC for this deployment
  PrivateSubnetIds:
    Type: List<AWS::EC2::Subnet::Id>
    Description: Two subnets that do not require public IP addresses
  PublicSubnetIds:
    Type: List<AWS::EC2::Subnet::Id>
    Description: Two subnets that are public-facing for the load balancer
  DeployedTag:
    Type: String
    Description: The tag of the image inside of the ECR to deploy. If not specified, ECS tasks are not deployed
    Default: ""

Conditions:
  deployEcsTasks: !Not [!Equals [!Ref DeployedTag, ""]]

Resources:
  taskSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Security group for Cosmic Verge ECS Tasks"
      SecurityGroupIngress:
        - SourceSecurityGroupId: !Ref loadBalancerSecurityGroup
          IpProtocol: tcp
          FromPort: 7879
          ToPort: 7879
      VpcId: !Ref VpcId

  rdsSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: cosmicverge-rds-sg
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - SourceSecurityGroupId: !Ref taskSecurityGroup
          FromPort: 5432
          ToPort: 5432
          IpProtocol: tcp

  rdsSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: cosmicverge
      SubnetIds: !Ref PrivateSubnetIds

  rdsInstance:
    Type: AWS::RDS::DBInstance
    Properties:
      AllocatedStorage: 20
      AllowMajorVersionUpgrade: true
      AutoMinorVersionUpgrade: true
      BackupRetentionPeriod: 14
      DBInstanceClass: db.t2.medium
      DBSubnetGroupName: !Ref rdsSubnetGroup
      DBName: cosmicverge
      Engine: postgres
      EngineVersion: "12.5"
      MasterUsername: cosmicverge
      MasterUserPassword: "{{resolve:ssm-secure:cosmicverge-rds-password:1}}"
      MultiAZ: false
      Port: 5432
      StorageEncrypted: true
      StorageType: gp2
      VPCSecurityGroups:
        - !Ref rdsSecurityGroup

  redisSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Cosmic Verge Redis Cache Security Group
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: "6379"
          ToPort: "6379"
          SourceSecurityGroupId: !Ref taskSecurityGroup
      VpcId: !Ref VpcId

  redisSubnetGroup:
    Type: AWS::ElastiCache::SubnetGroup
    Properties:
      CacheSubnetGroupName: cosmicverge-redis-subnets
      Description: Cosmic Verge Redis Cache Subnet Group
      SubnetIds: !Ref PrivateSubnetIds

  redisCacheCluster:
    Type: AWS::ElastiCache::CacheCluster
    Properties:
      AutoMinorVersionUpgrade: true
      CacheNodeType: cache.t2.micro
      CacheSubnetGroupName: !Ref redisSubnetGroup
      ClusterName: cosmicverge-redis
      Engine: redis
      EngineVersion: 6.x
      NumCacheNodes: 1
      Port: 6379
      VpcSecurityGroupIds:
        - !GetAtt [redisSecurityGroup, GroupId]

  ecrRepository:
    Type: AWS::ECR::Repository
    Properties:
      RepositoryName: "khonsulabs/cosmicverge"

  releasesBucket:
    Type: AWS::S3::Bucket
    Properties:
      AccessControl: Private
      WebsiteConfiguration:
        ErrorDocument: index.html
        IndexDocument: index.html

  assetsBucket:
    Type: AWS::S3::Bucket
    Properties:
      AccessControl: Private
      WebsiteConfiguration:
        ErrorDocument: error.html
        IndexDocument: index.html

  assetsBucketPolicy:
    Type: "AWS::S3::BucketPolicy"
    Properties:
      Bucket: !Ref assetsBucket
      PolicyDocument:
        Statement:
          - Action:
              - "s3:GetObject"
            Effect: "Allow"
            Resource:
              - !Join ["/", [!GetAtt [assetsBucket, Arn], "*"]]
            Principal: "*"

  ecrDeploymentUser:
    Type: AWS::IAM::User
    Properties:
      UserName: "cosmicverge-deploy-user"
      Path: "/deploy/"
      Policies:
        - PolicyName: "cosmicverge-deploy-policy"
          PolicyDocument:
            Statement:
              - Effect: "Allow"
                Action:
                  - ecr:GetAuthorizationToken
                Resource: "*"
              - Effect: "Allow"
                Action:
                  - ecr:BatchCheckLayerAvailability
                  - ecr:GetDownloadUrlForLayer
                  - ecr:GetRepositoryPolicy
                  - ecr:DescribeRepositories
                  - ecr:ListImages
                  - ecr:DescribeImages
                  - ecr:BatchGetImage
                  - ecr:InitiateLayerUpload
                  - ecr:UploadLayerPart
                  - ecr:CompleteLayerUpload
                  - ecr:PutImage
                Resource:
                  - !GetAtt [ecrRepository, Arn]
              - Effect: "Allow"
                Action:
                  - cloudformation:DescribeStacks
                  - cloudformation:UpdateStack
                  - cloudformation:DescribeStackEvents
                  - cloudformation:DescribeStackResource
                  - cloudformation:DescribeStackResources
                Resource:
                  - !Ref AWS::StackId

  executingRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Effect: Allow
            Principal:
              Service: [ecs-tasks.amazonaws.com]
            Action: ["sts:AssumeRole"]
      Path: /
      Policies:
        - PolicyName: cosmicvergeExecutionPolicy
          PolicyDocument:
            Statement:
              - Effect: "Allow"
                Action:
                  - ecr:GetAuthorizationToken
                  - ecr:BatchCheckLayerAvailability
                  - ecr:BatchGetImage
                  - ecr:GetDownloadUrlForLayer
                Resource:
                  - "*"
              - Effect: "Allow"
                Action:
                  - logs:CreateLogStream
                  - logs:PutLogEvents
                Resource:
                  - !GetAtt [taskLogGroup, Arn]

  ecsCluster:
    Condition: deployEcsTasks
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName: cosmicverge

  taskLogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: cosmicverge
      RetentionInDays: 14

  taskRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Effect: Allow
            Principal:
              Service: [ecs-tasks.amazonaws.com]
            Action: ["sts:AssumeRole"]
      Path: /
      Policies:
        - PolicyName: cosmicverge-task-execution-role
          PolicyDocument:
            Statement:
              - Effect: Allow
                Action:
                  - s3:GetObject
                Resource:
                  - !Join ["/", [!GetAtt [releasesBucket, Arn], "*"]]
                  - !GetAtt [releasesBucket, Arn]
              - Effect: Allow
                Action:
                  - s3:PutObject
                  - s3:GetObject
                  - s3:ListBucket
                Resource:
                  - !Join ["/", [!GetAtt [assetsBucket, Arn], "*"]]
                  - !GetAtt [assetsBucket, Arn]

  ecsTask:
    Condition: deployEcsTasks
    Type: AWS::ECS::TaskDefinition
    Properties:
      ContainerDefinitions:
        - Name: cosmicverge-server
          Essential: true
          Image:
            !Join [
              "",
              [
                !Ref "AWS::AccountId",
                ".dkr.ecr.",
                !Ref "AWS::Region",
                ".amazonaws.com/khonsulabs/cosmicverge:",
                !Ref DeployedTag,
              ],
            ]
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: !Ref taskLogGroup
              awslogs-region: !Ref "AWS::Region"
              awslogs-stream-prefix: server
          PortMappings:
            - ContainerPort: 7879
              HostPort: 7879
              Protocol: tcp
      Cpu: 256
      Family: cosmicverge
      ExecutionRoleArn: !GetAtt [executingRole, Arn]
      Memory: 512
      NetworkMode: awsvpc
      TaskRoleArn: !GetAtt [taskRole, Arn]
      RequiresCompatibilities:
        - FARGATE
        - EC2

  ecsService:
    Condition: deployEcsTasks
    Type: AWS::ECS::Service
    DependsOn:
      - httpsListener
    Properties:
      Cluster: !Ref ecsCluster
      DesiredCount: 2
      TaskDefinition: !Ref ecsTask
      LaunchType: FARGATE
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: DISABLED
          Subnets: !Ref PrivateSubnetIds
          SecurityGroups:
            - !Ref taskSecurityGroup
      LoadBalancers:
        - ContainerName: cosmicverge-server
          ContainerPort: 7879
          TargetGroupArn: !Ref targetGroup

  loadBalancerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Cosmic Verge Load Balancer Security Group
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          CidrIp: "0.0.0.0/0"
          FromPort: 443
          ToPort: 443

  loadBalancer:
    Condition: deployEcsTasks
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: cosmicverge-lb
      Scheme: internet-facing
      Subnets: !Ref PublicSubnetIds
      SecurityGroups: [!Ref loadBalancerSecurityGroup]

  certificate:
    Type: AWS::CertificateManager::Certificate
    Properties:
      DomainName: "cosmicverge.com"
      ValidationMethod: DNS
      SubjectAlternativeNames:
        - "www.cosmicverge.com"

  httpsListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Condition: deployEcsTasks
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref targetGroup
      LoadBalancerArn: !Ref loadBalancer
      Port: 443
      Protocol: HTTPS
      Certificates:
        - CertificateArn: !Ref certificate

  targetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Condition: deployEcsTasks
    Properties:
      Port: 7879
      Protocol: HTTP
      VpcId: !Ref VpcId
      HealthCheckPath: "/__healthcheck"
      HealthCheckIntervalSeconds: 10
      HealthCheckTimeoutSeconds: 5
      UnhealthyThresholdCount: 2
      HealthyThresholdCount: 2
      TargetGroupAttributes:
        - Key: deregistration_delay.timeout_seconds
          Value: 60 # default is 300
      TargetType: ip
